feat: jingdong written coding, hot100

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,10 @@
         "print": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "charconv": "cpp",
+        "cuchar": "cpp"
     }
 }
